docu updates ported from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-12-branch@54187 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-data.texi
+++ b/doc/manual/R-data.texi
@@ -1274,7 +1274,7 @@ The call @code{dbDriver("MySQL")} returns a database connection manager
 object, and then a call to @code{dbConnect} opens a database connection
 which can subsequently be closed by a call to the generic function
 @code{dbDisconnect}.  Use @code{dbDriver("Oracle")},
-@code{dbdDriver("PostgreSQL")} or @code{dbDriver("SQLite")} with those
+@code{dbDriver("PostgreSQL")} or @code{dbDriver("SQLite")} with those
 DBMSs and packages @pkg{ROracle}, @pkg{RPostgreSQL} or @pkg{RSQLite}
 respectively.
 
