deprecate zip-data
git-svn-id: https://svn.r-project.org/R/trunk@54200 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -504,6 +504,7 @@ package, specify @samp{LazyLoad: yes}.
 The @samp{ZipData} field controls whether the automatic
 Windows build will zip up the data directory or no: set this to
 @samp{no} if your package will not work with a zipped data directory.
+(Setting to any other value is deprecated.)
 
 If the @file{DESCRIPTION} file is not entirely in @acronym{ASCII} it
 should contain an @samp{Encoding} field specifying an encoding.  This is
