add checks for inefficiently saved data
git-svn-id: https://svn.r-project.org/R/trunk@54217 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-ints.texi
+++ b/doc/manual/R-ints.texi
@@ -3548,6 +3548,14 @@ Default: true.
 @item _R_CHECK_ASCII_DATA_
 If true, check data for non-ascii characters.
 Default: true.
+@item _R_CHECK_COMPACT_DATA_
+If true, check data for ascii and uncompressed saves.
+Default: true.
+@item _R_CHECK_COMPACT_DATA2_
+If true, check data for ascii and uncompressed saves, and also check if
+using @command{bzip2} or @code{xz} compression would be significantly
+better.  
+Default: false.
 @item _R_CHECK_SKIP_ARCH_
 Comma-separated list of architectures that will be omitted from
 checking in a multi-arch setup.
