--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -1758,15 +1758,14 @@ should be removed and the build re-run.
 
 The @option{--resave-data} option allows saved images (@file{.rda} and
 @file{.RData} files) in the @file{data} directory to be optimized for
-compactness.  It can take values @code{"no"}, @code{"gzip"} and
-@code{"yes"} (equivalent to calling without a value).  Value
-@code{"yes"} calls @code{tools::resaveRdaFiles} on the @file{data}
-directory, and warns about the need for a dependence on @code{R (>=
-2.10)} is @command{bzip2} or @command{xz} compression is selected for
-any of the files.  If this is thought undesirable,
-@option{--resave-data="gzip"} will re-save with @command{gzip}
-compression any @acronym{ASCII} or uncompressed saves, or any saves from
-before @R{} 1.4.0.
+size.  It can take values @code{"no"}, @code{"gzip"} and @code{"best"}
+(equivalent to calling without a value).  Value @code{"best"} calls
+@code{tools::resaveRdaFiles} on the @file{data} directory, and warns
+about the need for a dependence on @code{R (>= 2.10)} is @command{bzip2}
+or @command{xz} compression is selected for any of the files.  If this
+is thought undesirable, @option{--resave-data="gzip"} will re-save with
+@command{gzip} compression any @acronym{ASCII} or uncompressed saves,
+and any saves from before @R{} 1.4.0.
 
 It can be useful to run @code{R CMD check --check-subdirs=yes} on the
 built tarball as a final check on the contents.
