--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -814,12 +814,13 @@ case they should only be to packages listed in the @code{Depends} and
 package.  To check for such references, load all the images into a
 vanilla @R{} session, and look at the output of @code{loadedNamespaces()}.
 
-If your data files are enormous and you are not using @samp{LazyData}
+If your data files are large and you are not using @samp{LazyData}
 you can speed up installation by providing a file @file{datalist} in the
 @file{data} subdirectory.  This should have one line per topic that
 @code{data()} will find, in the format @samp{foo} if @code{data(foo)}
 provides @samp{foo}, or @samp{foo: bar bah} if @code{data(foo)} provides
-@samp{bar} and @samp{bah}.
+@samp{bar} and @samp{bah}.  @command{R CMD build} will automatically add
+a @file{datalist} file to directories of over 1Mb.
 
 Tables (@file{.tab}, @file{.txt}, or @file{.csv} files) can be
 compressed by @command{gzip}, @command{bzip2} or @command{xz},
