--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -4367,10 +4367,11 @@ environment can be found in the ``R on AIX'' project on R-Forge
 
 The Cygwin emulation layer on Windows can be treated as a Unix-alike OS.
 This is unsupported, but experiments have been conducted and a few
-workarounds added for @R{} 2.6.0. However, as it lacks support for C
-complex arithmetic, @R{} 2.13.0 and later cannot be built.  (Cygwin
-users have apparently made use of the emulation for @command{gcc} at
-@uref{http://www.moshier.net/c9x_readme.html}.)
+workarounds added for @R{} 2.6.0.  @R{} 2.13.0 requires C99 complex math
+support, which should appear in 2011
+(@uref{http://cygwin.net/ml/cygwin-patches/2010-q4/msg00000.html}, based
+on NetBSD code which is it seems in turn derived from the code of
+@uref{http://www.moshier.net/c9x_readme.html}).
 
 Only building as a shared library works,@footnote{Windows DLLs need to
 have all links resolved at build time and so cannot resolve against
