switch the default for --resave-data
git-svn-id: https://svn.r-project.org/R/trunk@54274 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -1768,15 +1768,15 @@ should be removed and the build re-run.
 
 The @option{--resave-data} option allows saved images (@file{.rda} and
 @file{.RData} files) in the @file{data} directory to be optimized for
-size.  It can take values @code{"no"}, @code{"gzip"} and @code{"best"}
-(equivalent to giving it without a value).  Value @code{"best"} calls
-@code{tools::resaveRdaFiles} on the @file{data} directory, and adds a
-dependence on @code{R (>= 2.10)} if @command{bzip2} or @command{xz}
-compression is selected for any of the files.  If this is thought
-undesirable, @option{--resave-data="gzip"} will re-save with
-@command{gzip} compression any @acronym{ASCII} or uncompressed saves,
-and any saves from before @R{} 1.4.0.  It can also compress tabular
-files and convert @file{.R} files to saved images.
+size.  It can take values @code{"no"}, @code{"gzip"} (the default) and
+@code{"best"} (equivalent to giving it without a value).  Value
+@code{"best"} calls @code{tools::resaveRdaFiles} on the @file{data}
+directory, and adds a dependence on @code{R (>= 2.10)} if
+@command{bzip2} or @command{xz} compression is selected for any of the
+files.  If this is thought undesirable, @option{--resave-data="gzip"}
+will re-save with @command{gzip} compression any @acronym{ASCII} or
+uncompressed saves, and any saves from before @R{} 1.4.0.  It will also
+compress tabular files and convert @file{.R} files to saved images.
 
 It can be useful to run @code{R CMD check --check-subdirs=yes} on the
 built tarball as a final check on the contents.
