port r54302 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-12-branch@54303 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/rw-FAQ.texi
+++ b/src/gnuwin32/rw-FAQ.texi
@@ -1278,7 +1278,7 @@ need to install R and/or packages from their sources.  To install just a
 few packages with static HTML pages use
 
 @example
-R CMD INSTALL --html @var{pkg1} @var{pkg2} \ldots
+R CMD INSTALL --html @var{pkg1} @var{pkg2} @dots{}
 @end example
 
 To install R itself with static HTML pages change the following line in
