more on Solaris, Cygwin
git-svn-id: https://svn.r-project.org/R/trunk@54312 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -4213,10 +4213,10 @@ tests, whereas for @cputype{amd64} the builds have failed to complete in
 several different ways, most recently with relocation errors for
 @file{libRblas.so}.
 
-@cputype{x86} builds without any optimization seem to be more
-successful except for some examples of complex arithmetic: the issue
-seems to be that @command{gcc} and the system libraries differ over the
-use of SSE registers.
+@cputype{x86} builds without any optimization in @code{CFLAGS} seem to
+be more successful except for some examples of complex arithmetic: the
+issue seems to be that @command{gcc} and the system libraries differ
+over the use of SSE registers.
 
 
 @node AIX, Cygwin, Solaris, Platform notes
